<resources>
    <string name="app_name">Studify</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="inputpassword">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="have_an_account_login">Have an account? LogIn</string>
    <string name="log_in">Log in</string>
    <string name="email_addresslogin">Email Address</string>
    <string name="email_addressLogin">Email Address</string>
    <string name="need_an_account_sign_up">Need an Account? Sign up</string>
    <string name="go">GO</string>
    <string name="or_log_in_with_socials">Or log in with socials</string>
    <string name="todo">TODO</string>
    <string name="twitter">TODO</string>
    <string name="google">TODO</string>
    <string name="welcome">Welcome!</string>
    <string name="create_a_new_account_with_studify">Create a new account with Studify</string>
</resources>