<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FF9800"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <!-- User Email-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email_addressLogin"
            android:textColorHint="@color/black"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--User Password-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/inputpassword"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/black"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_an_account_sign_up"
            android:background="#0000"
            android:textColor="@color/black"
            />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textColor="@color/black"
        android:background="#4CAF50"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"

        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/or_log_in_with_socials"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"

        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="-160dp"
        android:layout_marginTop="10dp"

        android:src="@drawable/facebook"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-80dp"
        android:src="@drawable/google"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/google" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-180dp"
        android:src="@drawable/twitter"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/twitter" />








</LinearLayout>